# dining_philosophers

./: .gitignore  Cargo.toml  README.md
src/: main.rs
